fix: adjust el porvenir final

--- a/pages/el-porvenir/index.html
+++ b/pages/el-porvenir/index.html
@@ -60,10 +60,10 @@
                                     src="/assets/img/cusiana/echando-raices.svg"
                                     alt />
                                 <img class="img-fluid"
-                                    src="/assets/img/el-porvenir/preparados.svg"
+                                    src="/assets/img/el-porvenir/preparados-inactivo.svg"
                                     alt />
                                 <img class="img-fluid"
-                                    src="/assets/img/el-porvenir/nos-relacionamos.svg"
+                                    src="/assets/img/el-porvenir/nos-relacionamos-inactivo.svg"
                                     alt />
                             </div>
                         </div>
@@ -3034,7 +3034,6 @@
                                     </div>
 
                                     <div class="dots-map-2024 dots-monitoreo d-none" id="cusiana-monitoreo-3">
-                                        <span style="--outline-color: #0036ff;left: 168px;top: 386px;" class="location-map-dot"></span>
                                         <span style="--outline-color: #0036ff;left: 551px;top: 386px;" class="location-map-dot"></span>
                                         <span style="--outline-color: #0036ff;left: 552px;top: 432px;" class="location-map-dot"></span>                                        
                                     </div>
@@ -3042,7 +3041,7 @@
                                     <div class="dots-map-2024 dots-monitoreo d-none" id="cusiana-monitoreo-4">
                                         <span style="--outline-color: #5dffa5;left: 194px;top: 274px;" class="location-map-dot"></span>
                                         <span style="--outline-color: #5dffa5;left: 577px;top: 327px;" class="location-map-dot"></span>
-                                        <span style="--outline-color: #5dffa5;left: 7435x;top: 264px;" class="location-map-dot"></span>
+                                        <span style="--outline-color: #5dffa5;left: 743px;top: 264px;" class="location-map-dot"></span>
                                     </div>
 
                                     <div class="dots-map-2024 dots-monitoreo d-none" id="cusiana-monitoreo-5">
@@ -3135,11 +3134,11 @@
                                         <!-- Item 1 -->
                                         <span style="--outline-color: #ff0000;left: 338px;top: 247px;" class="location-map-dot"></span>
                                         <!-- Item 2 -->
-                                        <span style="--outline-color: #ff0000;left: 645px;top: 238px;" class="location-map-dot"></span>
+                                        <span style="--outline-color: #ff0000;left: 643px;top: 236px;" class="location-map-dot"></span>
                                         <!-- Item 3 -->
-                                        <span style="--outline-color: #ff0000;left: 750px;top: 248px;" class="location-map-dot"></span>
+                                        <span style="--outline-color: #ff0000;left: 752px;top: 246px;" class="location-map-dot"></span>
                                         <!-- Item 4 -->
-                                        <span style="--outline-color: #ff0000;left: 733px;top: 371px;" class="location-map-dot"></span>
+                                        <span style="--outline-color: #ff0000;left: 736px;top: 371px;" class="location-map-dot"></span>
                                     </div>
 
                                     <div class="dots-map-2024 dots-monitoreo d-none" id="cusiana-monitoreo-8">
@@ -3291,7 +3290,7 @@
                                         class="dots-map-2024 dots-monitoreo d-none"
                                         id="cusiana-monitoreo-14">
                                         <span
-                                            style="--outline-color: #a59eff; left: 536px; top: 268px;"
+                                            style="--outline-color: #a59eff; left: 540px; top: 266px;"
                                             class="location-map-dot"></span>
                                     </div>
 
@@ -3442,7 +3441,7 @@
 
                                     <div class="dots-map-2024 dots-operaciones d-none" id="porvenir-operaciones-15">
                                         <!-- Item 1 -->
-                                        <span style="--outline-color: #21a605;left: 486px;top: 278px;" class="location-map-dot"></span>
+                                        <span style="--outline-color: #21a605;left: 484px;top: 283px;" class="location-map-dot"></span>
                                     </div>
 
                                     <div class="dots-map-2024 dots-operaciones d-none" id="porvenir-operaciones-16">
@@ -3519,7 +3518,7 @@
                                         <a download="" href="/assets/docs/porvenir/interno/PCO-EPOR-02 ajuste 2024.pdf" style="--outline-color: none;left: 730px;top: 229px;" class="location-map-dot dot-image">
                                             <img src="/assets/img/map-punto-control.svg" alt="">
                                             <span class="dot-image-text">C2 +</span>
-                                        </a><a download="" href="/assets/docs/porvenir/interno/PCP-EPOR-03 ajuste 2024.pdf" style="--outline-color: none;left: 579px;top: 362px;" class="location-map-dot dot-image">
+                                        </a><a download="" href="/assets/docs/porvenir/interno/PCP-EPOR-03 ajuste 2024.pdf" style="--outline-color: none;left: 579px;top: 362px;z-index: 5;" class="location-map-dot dot-image">
                                             <img src="/assets/img/map-punto-control.svg" alt="">
                                             <span class="dot-image-text">C3 +</span>
                                         </a><a download="" href="/assets/docs/porvenir/interno/PCP-EPOR-04 ajuste 2024.pdf" style="--outline-color: none;left: 602px;top: 382px;" class="location-map-dot dot-image">
@@ -3575,7 +3574,7 @@
                                         <!-- Item 2 -->
                                         <span style="--outline-color: #acff9c;left: 368px;top: 239px;" class="location-map-dot"></span>
                                         <!-- Item 3 -->
-                                        <span style="--outline-color: #acff9c;left: 450px;top: 333px;" class="location-map-dot"></span>
+                                        <span style="--outline-color: #acff9c;left: 448px;top: 335px;" class="location-map-dot"></span>
                                         <!-- Item 4 -->
                                         <span style="--outline-color: #acff9c;left: 620px;top: 245px;" class="location-map-dot"></span>
                                     </div>
