Fix: adjust final miraflores

--- a/pages/miraflores/index.html
+++ b/pages/miraflores/index.html
@@ -1300,7 +1300,7 @@
                                         class="d-none d-lg-block col-12 col-lg-6">
                                         <h6
                                             class="card-interactive-icons___title font-weight-bold text-gray-light-ocensa">
-                                            Gestión Integral de Residuos
+                                            Gestión Integral de <br>Residuos
                                         </h6>
                                         <div data-target="cusiana-monitoreo-14"
                                             style="gap: 16px"
